--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -13,6 +13,7 @@
     "parishes": {
       "need_select_parish": "Неабходна выбраць парафію, каб яе абнавіць.",
       "chosen_parish": "Выбранная парафия:  ${title} ",
+      "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
       "single_parish": "Вы абслугоўваеце адну парафію.",
 
       "list_of_parishes": "Вось спісак парафій: ",
