small text massage

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,9 +14,9 @@
       "need_select_parish": "Неабходна выбраць парафію, каб яе абнавіць.",
       "chosen_parish": "Выбранная парафия:  ${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
-      "single_parish": "Вы абслугоўваеце адну парафію.",
+      "single_parish": "Вы абслугоўваеце адну парафію",
 
-      "list_of_parishes": "Вось спісак парафій: ",
+      "list_of_parishes": "Вось спісак парафій:",
       "refresh_button": "🚀 Да, все верно!",
       "masses_actual": "У сістэме знойдзена ${massCount} канфігураціі для імшы. Усе імшы абноўлены і актуальны! Дзякуй!",
       "change_button": "❌ Нет, нужно изменить!",
