--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,27 +1,27 @@
 {
   "scenes": {
     "start": {
-      "welcome_back": "Хвала Хрысту! Дзякую, што працягваеш падтрымліваць актуальны расклад на сваей парафіі! Нагадваю, што я створаны табе дапамагчы!",
+      "welcome_back": "Хвала Хрысту! Дзякую, што працягваеш падтрымліваць актуальны расклад для сваей парафіі! Нагадваю, што я створаны табе дапамагчы!",
       "new_account": "Аккаунт создан успешно! Перед началом работы, рекомендую тебе прочитать небольшую инструкцию о том, кто я такая и как со мной работать 😊",
       "no_parish_key": "Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго: ",
-      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Aaron, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка абнавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Калі нешта пашло не так, напішы мне /saveme паспрабую дапамагчы\n\n 🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Обо мне\n\n🔻 Зараз я працую ў рэжыме бэта-тесціраванія і распрацоўка яшчэ ідзе. Пад час карыстання у цябе могуць з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
-      "lets_go": "Хвала Навекі!"
+      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка аднавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Калі нешта пашло не так, напішы мне /saveme паспрабую дапамагчы\n\n 🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Обо мне\n\n🔻 Зараз я працую ў рэжыме бэта-тесціраванія і распрацоўка яшчэ ідзе. Пад час карыстання у цябе могуць з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
+      "lets_go": "Хвала на векі!"
     },
     "about": {
-      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - уведамленне аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў німа - бот дазваляе абнавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці абнавіць расклад. Таму бот даступны тольк валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам! :)"
+      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - уведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў німа - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны тольк валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам! :)"
     },
     "parishes": {
-      "need_select_parish": "Неабходна выбраць парафію, каб яе абнавіць.",
-      "chosen_parish": "Выбранная парафия:  ${title} ",
+      "need_select_parish": "Неабходна выбраць парафію, каб яе аднавіць.",
+      "chosen_parish": "Выбраная парафія:  ${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
       "single_parish": "Вы абслугоўваеце адну парафію",
 
-      "list_of_parishes": "Вось спісак парафій:",
+      "list_of_parishes": "Вось спіс парафій:",
       "refresh_button": "🚀 Да, все верно!",
       "masses_actual": "У сістэме знойдзена ${massCount} канфігураціі для імшы. Усе імшы абноўлены і актуальны! Дзякуй!",
-      "change_button": "❌ Нет, нужно изменить!",
+      "change_button": "❌ Змяніць інфу пра парафію!",
       "back_button": "◀️ Назад",
-      "ask_for_details": "Каб праглядзець падрабязную инфармацыю пра парафію клікні на яе (кнопкі вышэй)."
+      "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопкі вышэй)."
     },
     "parish": {
       "title": "Імя парафіі : ${title}",
@@ -49,7 +49,7 @@
     }
   },
   "shared": {
-    "what_next": "✋ Чым магу дапамагчы? Спісак задач даступны праз меню!",
+    "what_next": "✋ Чым магу дапамагчы? Спіс задач даступны праз меню!",
     "something_went_wrong": "❌ Ошибочка вышла.. Попробуй еще раз"
   },
   "keyboards": {
@@ -57,7 +57,7 @@
       "back": "◀️ Назад"
     },
     "main_keyboard": {
-      "schedule": "✞ Абнавіць расклад",
+      "schedule": "✞ Аднавіць расклад",
       "parish": "⛪ Мая парафія",
       "about": "❓ Инфa пра Аарона",
       "contact": "✍️ Зваротная сувязь",
