--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,7 +10,7 @@
       "main": "Hey! My name is Aaron! I'm created to help you administrate masses in your parish to make it actual weekly on www.imsha.by! First of all, thanks for activating me!\n\n Have you ever had a moments when forgot to update you mass schedule? My main goal is to remind you to do it! I will send automatically notification each week (Friday at 08.00 AM) \n\n Bot is available only for parish administrators! \n\n Also you can view parish information. \n\n Last valuable capability I provide - contact to my creators-developers in case you need it!"
     },
     "parishes": {
-      "need_select_parish": "You have to choose parish below.",
+      "need_select_parish": "You have to choose parish below:",
       "single_parish": "You are administrating single parish.",
       "refresh_button": "🚀 Yes, it's correct!",
       "masses_actual": "There are  ${massCount} mass configuration found. All masses are update and actualized accordingly! God bless you!",
