fix UX spelling mostly

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,25 +8,26 @@
       "lets_go": "Хвала на векі!"
     },
     "about": {
-      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - уведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў німа - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны тольк валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам! :)"
+      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам! :)"
     },
     "parishes": {
-      "need_select_parish": "Неабходна выбраць парафію, каб яе аднавіць.",
-      "chosen_parish": "Выбраная парафія:  ${title} ",
+      "need_select_parish": "Неабходна выбрать парафію, каб аднавіць для яе расклад Імш.",
+      "chosen_parish": "<b>Выбраная парафія</b>:  ${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
       "single_parish": "Вы абслугоўваеце адну парафію",
-
+      "parish_list": "Спіс парафій:",
       "list_of_parishes": "Вось спіс парафій:",
-      "refresh_button": "🚀 Да, все верно!",
-      "masses_actual": "У сістэме знойдзена ${massCount} канфігураціі для імшы. Усе імшы абноўлены і актуальны! Дзякуй!",
+      "cta_update": "\n Расклад Iмш актуальны?",
+      "refresh_button": "🚀 Так, усё правільна!",
+      "masses_actual": "Усе імшы абноўлены і актуальны! Дзякуй!",
       "change_button": "❌ Змяніць інфу пра парафію!",
       "back_button": "◀️ Назад",
-      "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопкі вышэй)."
+      "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопка(і) вышэй)."
     },
     "parish": {
       "title": "Імя парафіі : ${title}",
       "address": "<b>Адрас парафіі</b> : ${address}",
-      "broadcastUrl": "<b>Спасылка для online</b> : ${broadcastUrl}",
+      "broadcastUrl": "<b>Спасылка на online трансляцыю</b> : ${broadcastUrl}",
       "phone": "<b>Телефон парафіі</b> : ${phone}",
       "email": "<b>Email</b> : ${email}",
       "website": "<b>Сайт</b> : ${website}",
@@ -59,7 +60,7 @@
     "main_keyboard": {
       "schedule": "✞ Аднавіць расклад",
       "parish": "⛪ Мая парафія",
-      "about": "❓ Инфa пра Аарона",
+      "about": "❓ Інфa пра Аарона",
       "contact": "✍️ Зваротная сувязь",
       "settings": "⚙️ Настройки"
     }
