add redis for session

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,7 +12,7 @@
     },
     "parishes": {
       "need_select_parish": "Неабходна выбрать парафію, каб аднавіць для яе расклад Імш.",
-      "chosen_parish": "<b>Выбраная парафія</b>:  ${title} ",
+      "chosen_parish": "Выбраная парафія:  ${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
       "single_parish": "Вы абслугоўваеце адну парафію",
       "parish_list": "Спіс парафій:",
