--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,14 +12,14 @@
     },
     "parishes": {
       "need_select_parish": "Неабходна выбрать парафію, каб аднавіць для яе расклад Імш.",
-      "chosen_parish": "Выбраная парафія:  ${title} ",
+      "chosen_parish": "${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
       "single_parish": "Вы абслугоўваеце адну парафію",
       "parish_list": "Спіс парафій:",
       "list_of_parishes": "Вось спіс парафій:",
       "cta_update": "\n Расклад Iмш актуальны?",
       "refresh_button": "🚀 Так, усё правільна!",
-      "masses_actual": "Усе імшы абноўлены і актуальны! Дзякуй!",
+      "masses_actual": "Усе імшы адноўлены і актуальны. Дзякуй!",
       "change_button": "❌ Змяніць інфу пра парафію!",
       "back_button": "◀️ Назад",
       "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопка(і) вышэй)."
