adjust spelling and fix delete messages

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,7 +8,7 @@
       "lets_go": "Хвала на векі!"
     },
     "about": {
-      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам! :)"
+      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
     },
     "parishes": {
       "need_select_parish": "Неабходна выбрать парафію, каб аднавіць для яе расклад Імш.",
@@ -45,7 +45,7 @@
       "settings": "Настройки"
     },
     "contact": {
-      "write_to_the_creator": "🤔 Тут ты можаш паслаць паведамленне распрацоўшчыкам бота! Добра падумай і змясці сваю думку ў адно паведамленне!",
+      "write_to_the_creator": "🤔 Тут ты можаш паслаць паведамленне распрацоўшчыкам бота. Добра падумай і змясці сваю думку ў адно паведамленне!",
       "message_delivered": "📬 Дзякуй! Твае паведамленне дастаўлена!  "
     }
   },
@@ -66,7 +66,7 @@
     }
   },
   "other": {
-    "default_handler": "🚧 Нажми на иконку в правом нижнем углу чтобы открыть Telegram-клавиатуру и выбери раздел, в который ты хочешь попасть",
+    "default_handler": "🚧 Націсні на абразок у правым ніжнім куце каб адкрыць telegram-клавіятуру і абяры раздзел, у які ты хочаш патрапіць.",
     "support": "🤝 Если тебе все нравится и ты хочешь выразить благодарность мне и Создателю, то ты можешь сделать это несколькими способами:"
   }
 }
