--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -66,7 +66,7 @@
     }
   },
   "other": {
-    "default_handler": "🚧 Націсні на абразок у правым ніжнім куце каб адкрыць telegram-клавіятуру і абяры раздзел, у які ты хочаш патрапіць.",
+    "default_handler": "🚧 Паведамленне не адпраўлена. Абяры пункт меню 'Зваротная сувязь', каб зкантактавацца з разпрацоўшчыкамі бота.",
     "support": "🤝 Если тебе все нравится и ты хочешь выразить благодарность мне и Создателю, то ты можешь сделать это несколькими способами:"
   }
 }
