--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,7 +14,7 @@
       "need_select_parish": "Неабходна выбрать парафію, каб аднавіць для яе расклад Імш.",
       "chosen_parish": "${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
-      "single_parish": "Вы абслугоўваеце адну парафію",
+      "single_parish": "Праверце ўважліва расклад Імш вашай парафіі.",
       "parish_list": "Спіс парафій:",
       "list_of_parishes": "Вось спіс парафій:",
       "cta_update": "\n Расклад Iмш актуальны?",
