change i8n button name

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -20,7 +20,7 @@
       "cta_update": "\n Расклад Iмш актуальны?",
       "refresh_button": "🚀 Так, усё правільна!",
       "masses_actual": "Усе імшы адноўлены і актуальны. Дзякуй!",
-      "change_button": "❌ Змяніць інфу пра парафію!",
+      "change_button": "⚙️ Змяніць расклад",
       "back_button": "◀️ Назад",
       "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопка(і) вышэй)."
     },
@@ -58,7 +58,7 @@
       "back": "◀️ Назад"
     },
     "main_keyboard": {
-      "schedule": "✞ Аднавіць расклад",
+      "schedule": "✞ Абнавіць расклад",
       "parish": "⛪ Мая парафія",
       "about": "❓ Інфa пра Аарона",
       "contact": "✍️ Зваротная сувязь",
