--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,8 +4,11 @@
       "welcome_back": "Хвала Хрысту! Дзякую, што працягваеш падтрымліваць актуальны расклад для сваей парафіі! Нагадваю, што я створаны табе дапамагчы!",
       "new_account": "Аккаунт создан успешно! Перед началом работы, рекомендую тебе прочитать небольшую инструкцию о том, кто я такая и как со мной работать 😊",
       "no_parish_key": "Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго: ",
-      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка аднавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Калі нешта пашло не так, напішы мне /saveme паспрабую дапамагчы\n\n 🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Обо мне\n\n🔻 Зараз я працую ў рэжыме бэта-тесціраванія і распрацоўка яшчэ ідзе. Пад час карыстання у цябе могуць з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
-      "lets_go": "Хвала на векі!"
+      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка аднавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Інфа пра Аарона\n\n🔻 Калі пад час карыстання у цябе з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
+      "lets_go": "Хвала на векі!",
+      "new_parish_added": "Новая прафія дададзена!",
+      "no_valid_key": "Уведзены ключ не існуе, калі ласка, звярніцеся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:",
+      "no_menu_click": "Мы не ведаем з якой вы парафіі, пакуль не атрымаеце КЛЮЧ парафіі і не перададіце Аарону, німа сэнсу выкарыстоўваць кнопкі Меню. Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:"
     },
     "about": {
       "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
@@ -62,7 +65,8 @@
       "parish": "⛪ Мая парафія",
       "about": "❓ Інфa пра Аарона",
       "contact": "✍️ Зваротная сувязь",
-      "settings": "⚙️ Настройки"
+      "settings": "⚙️ Настройки",
+      "start": "🔑 Начать работу"
     }
   },
   "other": {
