--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -3,17 +3,17 @@
     "start": {
       "welcome_back": "Хвала Хрысту! Дзякую, што працягваеш падтрымліваць актуальны расклад для сваей парафіі! Нагадваю, што я створаны табе дапамагчы!",
       "no_parish_key": "Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго: ",
-      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка аднавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Інфа пра Аарона\n\n🔻 Калі пад час карыстання у цябе з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
+      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка абнавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Інфа пра Аарона\n\n🔻 Калі пад час карыстання у цябе з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
       "lets_go": "Хвала на векі!",
       "new_parish_added": "Новая прафія дададзена!",
       "no_valid_key": "Уведзены ключ не існуе, калі ласка, звярніцеся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:",
       "no_menu_click": "Мы не ведаем з якой вы парафіі, пакуль не атрымаеце КЛЮЧ парафіі і не перададіце Аарону, німа сэнсу выкарыстоўваць кнопкі Меню. Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:"
     },
     "about": {
-      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці аднавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе аднавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці аднавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
+      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе абнавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці абнавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
     },
     "parishes": {
-      "need_select_parish": "Неабходна выбрать парафію, каб аднавіць для яе расклад Імш.",
+      "need_select_parish": "Неабходна выбрать парафію, каб абнавіць для яе расклад Імш.",
       "chosen_parish": "${title} ",
       "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
       "single_parish": "Праверце ўважліва расклад Імш вашай парафіі.",
@@ -21,7 +21,7 @@
       "list_of_parishes": "Вось спіс парафій:",
       "cta_update": "\n Расклад Iмш актуальны?",
       "refresh_button": "🚀 Так, усё правільна!",
-      "masses_actual": "Усе імшы адноўлены і актуальны. Дзякуй!",
+      "masses_actual": "Усе імшы абноўлены і актуальны. Дзякуй!",
       "change_button": "⚙️ Змяніць расклад",
       "back_button": "◀️ Назад",
       "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопка(і) вышэй)."
