fix: update error messages for initial authorization in English and Russian locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
       "lets_go": "Let's go!",
       "new_parish_added": "New parish have been",
       "no_valid_key": "Invalid parish key, please ask appropriate parish key from administrator & send it to me:",
-      "no_menu_click": "We are not aware of your PARISH. Please ask for parish KEY before using Menu buttons. Please ask appropriate parish key from imsha.by administrator & send it to me:",
+      "no_menu_click": "We are not aware of your PARISH. Please finalize initial authorization to proceed with Aaron bot functionality. Please ask help if needed from imsha.by administrator.",
       "ask_email": "Welcome! Please provide your email address to get started:",
       "ask_email_again": "Please provide your email address:",
       "email_sent": "A verification code has been sent to your email. Please check your inbox.",
