--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,7 +7,7 @@
       "lets_go": "Хвала на векі!",
       "new_parish_added": "Новая прафія дададзена!",
       "no_valid_key": "Уведзены ключ не існуе, калі ласка, звярніцеся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:",
-      "no_menu_click": "Мы не ведаем з якой вы парафіі, пакуль не атрымаеце КЛЮЧ парафіі і не перададіце Аарону, німа сэнсу выкарыстоўваць кнопкі Меню. Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:",
+      "no_menu_click": "Мы не ведаем з якой вы парафіі. Калі ласка, завяршыце першапачатковую аўтарызацыю, каб працягнуць працу з ботам Аарон. Звяжыцеся з адміністратарам imsha.by, калі патрэбна дапамога.",
       "ask_email": "Вітаем! Калі ласка, укажыце свой адрас электроннай пошты:",
       "ask_email_again": "Калі ласка, укажыце свой адрас электроннай пошты:",
       "email_sent": "Код пацверджання быў адпраўлены на вашу электронную пошту. Калі ласка, праверце паштовую скрыню.",
