feat: add migration period handling and new auth code retrieval logic
- Introduced migration period configuration in IConfig with periodEnd property.
- Implemented isMigrationPeriod function to check if the current date is within the migration period.
- Updated email input handling to fetch auth code directly during migration period.
- Added getAuthCode function to retrieve the auth code from the API.
- Enhanced error handling and user feedback for email not found scenarios in both English and Russian locales.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,7 @@
       "ask_code": "Please enter the verification code from your email:",
       "invalid_email": "Invalid email format. Please provide a valid email address:",
       "email_not_registered": "This email is not registered in the system. Please contact the administrator to get access.",
+      "email_not_in_system": "Your email is not in the system. Please contact the imsha.by administrator for help.",
       "invalid_code": "Invalid or expired verification code. Please try again:",
       "resend_code_button": "🔄 Resend code",
       "change_email_button": "✏️ Change email",
