--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,6 +14,7 @@
       "ask_code": "Калі ласка, увядзіце код пацверджання з вашай электроннай пошты:",
       "invalid_email": "Няправільны фармат электроннай пошты. Калі ласка, увядзіце сапраўдны адрас:",
       "email_not_registered": "Гэты адрас электроннай пошты не зарэгістраваны ў сістэме. Калі ласка, звяжыцеся з адміністратарам для атрымання доступу.",
+      "email_not_in_system": "Ваш email не знойдзены ў сістэме. Калі ласка, звярніцеся да адміністратара imsha.by па дапамогу.",
       "invalid_code": "Няправільны або састарэлы код пацверджання. Калі ласка, паспрабуйце яшчэ раз:",
       "resend_code_button": "🔄 Адправіць код яшчэ раз",
       "change_email_button": "✏️ Змяніць email",
