--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -25,6 +25,10 @@
       "session_expired_reauth": "⚠️ Ваша сесія sastарэла або недапушчальная. Калі ласка, аўтарызуйцеся зноў для працягу работы.",
       "token_retrieval_failed": "Прабачце, але ў нас узніклі часовыя тэхнічныя цяжкасці. Калі ласка, паспрабуйце яшчэ раз праз момант. Дзякуем за ваша цярпенне! 🙏",
       "retry_button": "🔄 Паспрабаваць яшчэ раз",
+      "ask_admin_button": "👨‍💼 Звярнуцца да адміністратара",
+      "admin_notified": "✅ Ваш запыт адпраўлены адміністратару. Яны дапамогуць вам у бліжэйшы час.",
+      "admin_notified_code_generation": "✅ Ваш запыт адпраўлены адміністратару. Яны правяруць ваш email і дапамогуць вам з рэгістрацыяй або доступам у бліжэйшы час.",
+      "admin_notified_token_retrieval": "✅ Ваш email пацверджаны, але ўзніклі праблемы з атрыманнем доступу. Ваш запыт адпраўлены адміністратару. Яны дапамогуць вам у бліжэйшы час.",
       "no_parishes_assigned": "Ваш акаўнт верыфікаваны, але ў вас пакуль няма прызначаных парафій для кіравання. Калі ласка, звяжыцеся з адміністратарам для атрымання доступу да парафіі.",
       "contact_admin_button": "✍️ Звязацца з адміністратарам"
     },
