New bot auth (#58)

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,7 +7,30 @@
       "lets_go": "Хвала на векі!",
       "new_parish_added": "Новая прафія дададзена!",
       "no_valid_key": "Уведзены ключ не існуе, калі ласка, звярніцеся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:",
-      "no_menu_click": "Мы не ведаем з якой вы парафіі, пакуль не атрымаеце КЛЮЧ парафіі і не перададіце Аарону, німа сэнсу выкарыстоўваць кнопкі Меню. Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:"
+      "no_menu_click": "Мы не ведаем з якой вы парафіі. Калі ласка, завяршыце першапачатковую аўтарызацыю, каб працягнуць працу з ботам Аарон. Звяжыцеся з адміністратарам imsha.by, калі патрэбна дапамога.",
+      "ask_email": "Вітаем! Калі ласка, укажыце свой адрас электроннай пошты:",
+      "ask_email_again": "Калі ласка, укажыце свой адрас электроннай пошты:",
+      "email_sent": "Код пацверджання быў адпраўлены на вашу электронную пошту. Калі ласка, праверце паштовую скрыню.",
+      "ask_code": "Калі ласка, увядзіце код пацверджання з вашай электроннай пошты:",
+      "invalid_email": "Няправільны фармат электроннай пошты. Калі ласка, увядзіце сапраўдны адрас:",
+      "email_not_registered": "Гэты адрас электроннай пошты не зарэгістраваны ў сістэме. Калі ласка, звяжыцеся з адміністратарам для атрымання доступу.",
+      "email_not_in_system": "Ваш email не знойдзены ў сістэме. Калі ласка, звярніцеся да адміністратара imsha.by па дапамогу.",
+      "invalid_code": "Няправільны або састарэлы код пацверджання. Калі ласка, паспрабуйце яшчэ раз:",
+      "resend_code_button": "🔄 Адправіць код яшчэ раз",
+      "change_email_button": "✏️ Змяніць email",
+      "code_resent": "Новы код адпраўлены на вашу электронную пошту.",
+      "verification_success": "✅ Электронная пошта паспяхова пацверджана! Вітаем у сістэме!",
+      "verification_failed": "Памылка пацверджання. Калі ласка, паспрабуйце яшчэ раз або звяжыцеся з падтрымкай.",
+      "already_verified": "Вы ўжо верыфікаваны і маеце доступ да сістэмы!",
+      "session_expired_reauth": "⚠️ Ваша сесія sastарэла або недапушчальная. Калі ласка, аўтарызуйцеся зноў для працягу работы.",
+      "token_retrieval_failed": "Прабачце, але ў нас узніклі часовыя тэхнічныя цяжкасці. Калі ласка, паспрабуйце яшчэ раз праз момант. Дзякуем за ваша цярпенне! 🙏",
+      "retry_button": "🔄 Паспрабаваць яшчэ раз",
+      "ask_admin_button": "👨‍💼 Звярнуцца да адміністратара",
+      "admin_notified": "✅ Ваш запыт адпраўлены адміністратару. Яны дапамогуць вам у бліжэйшы час.",
+      "admin_notified_code_generation": "✅ Ваш запыт адпраўлены адміністратару. Яны правяруць ваш email і дапамогуць вам з рэгістрацыяй або доступам у бліжэйшы час.",
+      "admin_notified_token_retrieval": "✅ Ваш email пацверджаны, але ўзніклі праблемы з атрыманнем доступу. Ваш запыт адпраўлены адміністратару. Яны дапамогуць вам у бліжэйшы час.",
+      "no_parishes_assigned": "Ваш акаўнт верыфікаваны, але ў вас пакуль няма прызначаных парафій для кіравання. Калі ласка, звяжыцеся з адміністратарам для атрымання доступу да парафіі.",
+      "contact_admin_button": "✍️ Звязацца з адміністратарам"
     },
     "about": {
       "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе абнавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці абнавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
@@ -24,7 +47,9 @@
       "masses_actual": "Усе імшы абноўлены і актуальны. Дзякуй!",
       "change_button": "⚙️ Змяніць расклад",
       "back_button": "◀️ Назад",
-      "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопка(і) вышэй)."
+      "ask_for_details": "Каб праглядзець падрабязную інфармацыю пра парафію націсні на яе (кнопка(і) вышэй).",
+      "no_parishes": "У вас пакуль няма прызначаных парафій для кіравання. Калі ласка, звяжыцеся з адміністратарам для атрымання доступу да парафіі.",
+      "contact_admin_button": "✍️ Звязацца з адміністратарам"
     },
     "parish": {
       "title": "Імя парафіі : ${title}",
