Update locale translations

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,13 +1,13 @@
 {
   "scenes": {
     "start": {
-      "welcome_back": "Хвала Хрысту! Дзякую, што працягваеш падтрымліваць актуальны расклад для сваей парафіі! Нагадваю, што я створаны табе дапамагчы!",
+      "welcome_back": "Хвала Хрысту! Дзякую, што працягваеш падтрымліваць актуальны расклад для сваей парафіі! Нагадваю, што я створаны каб табе дапамагчы!",
       "no_parish_key": "Калі ласка, звярніся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго: ",
-      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіальных імш актуальным. </b>\n\n🔻 Я буду нагадваць табе раз на тыдзень аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў німа - я дапамагу хутка абнавіць актуальнасць раскладу  праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне команды з дапамогай Telegram-клавіатуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім углу \n\n🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Інфа пра Аарона\n\n🔻 Калі пад час карыстання у цябе з'явіцца памылкі, калі ласка пішы Распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
+      "bot_description": "<b>🔻 Хвала Хрысту!\n\n</b> <b>🔻 Мае імя - Аарон, я дапамагу табе падтрымліваць расклад парафіяльных імшаў актуальным. </b>\n\n🔻 Раз на тыдзень я буду нагадваць табе аб неабходнасці абнавіць расклад імшаў на парафіі. Калі зменаў няма, я дапамагу хутка абнавіць актуальнасць раскладу праз адну каманду. Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам. \n\n🔻 Ты можаш даваць мне каманды з дапамогай Telegram-клавіятуры. Каб адкрыць яе, націсні на кнопку ў правым ніжнім вугле\n\n🔻 Больш інфармацыі пра мене ты зможаш знайсці ў секцыі ❓ Інфа пра Аарона\n\n🔻 Калі ў час карыстання пабачыш памылкі, калі ласка, пішы распрацоўшчыкам праз меню ✍️ Зваротная сувязь \n\n 🔻 Спадзяюся, табе спадабаецца карыстацца мной!",
       "lets_go": "Хвала на векі!",
-      "new_parish_added": "Новая прафія дададзена!",
-      "no_valid_key": "Уведзены ключ не існуе, калі ласка, звярніцеся да адміністратара imsha.by как атрымаць неабходны ключ для парафіі і адашлі мне яго:",
-      "no_menu_click": "Мы не ведаем з якой вы парафіі. Калі ласка, завяршыце першапачатковую аўтарызацыю, каб працягнуць працу з ботам Аарон. Звяжыцеся з адміністратарам imsha.by, калі патрэбна дапамога.",
+      "new_parish_added": "Новая парафія дададзена!",
+      "no_valid_key": "Уведзены ключ не існуе, калі ласка, звярніцеся да адміністратара imsha.by, каб атрымаць неабходны ключ для парафіі і адашліце яго мне:",
+      "no_menu_click": "Мы не ведаем, з якой вы парафіі. Калі ласка, завяршыце першапачатковую аўтарызацыю, каб працягнуць працу з ботам Аарон. Звяжыцеся з адміністратарам imsha.by, калі патрэбна дапамога.",
       "ask_email": "Вітаем! Калі ласка, укажыце свой адрас электроннай пошты:",
       "ask_email_again": "Калі ласка, укажыце свой адрас электроннай пошты:",
       "email_sent": "Код пацверджання быў адпраўлены на вашу электронную пошту. Калі ласка, праверце паштовую скрыню.",
@@ -22,27 +22,27 @@
       "verification_success": "✅ Электронная пошта паспяхова пацверджана! Вітаем у сістэме!",
       "verification_failed": "Памылка пацверджання. Калі ласка, паспрабуйце яшчэ раз або звяжыцеся з падтрымкай.",
       "already_verified": "Вы ўжо верыфікаваны і маеце доступ да сістэмы!",
-      "session_expired_reauth": "⚠️ Ваша сесія sastарэла або недапушчальная. Калі ласка, аўтарызуйцеся зноў для працягу работы.",
-      "token_retrieval_failed": "Прабачце, але ў нас узніклі часовыя тэхнічныя цяжкасці. Калі ласка, паспрабуйце яшчэ раз праз момант. Дзякуем за ваша цярпенне! 🙏",
+      "session_expired_reauth": "⚠️ Ваша сесія састарэла або недапушчальная. Калі ласка, аўтарызуйцеся зноў, каб працягнуць працу.",
+      "token_retrieval_failed": "Прабачце, але ў нас узніклі часовыя тэхнічныя цяжкасці. Калі ласка, паспрабуйце яшчэ раз праз некаторы час. Дзякуем за ваша цярпенне! 🙏",
       "retry_button": "🔄 Паспрабаваць яшчэ раз",
       "ask_admin_button": "👨‍💼 Звярнуцца да адміністратара",
-      "admin_notified": "✅ Ваш запыт адпраўлены адміністратару. Яны дапамогуць вам у бліжэйшы час.",
-      "admin_notified_code_generation": "✅ Ваш запыт адпраўлены адміністратару. Яны правяруць ваш email і дапамогуць вам з рэгістрацыяй або доступам у бліжэйшы час.",
-      "admin_notified_token_retrieval": "✅ Ваш email пацверджаны, але ўзніклі праблемы з атрыманнем доступу. Ваш запыт адпраўлены адміністратару. Яны дапамогуць вам у бліжэйшы час.",
+      "admin_notified": "✅ Ваш запыт адпраўлены адміністратарам. Яны дапамогуць вам у бліжэйшы час.",
+      "admin_notified_code_generation": "✅ Ваш запыт адпраўлены адміністратарам. Яны правераць ваш email і дапамогуць з рэгістрацыяй або доступам у бліжэйшы час.",
+      "admin_notified_token_retrieval": "✅ Ваш email пацверджаны, але ўзніклі праблемы з атрыманнем доступу. Ваш запыт адпраўлены адміністратарам. Яны дапамогуць вам у бліжэйшы час.",
       "no_parishes_assigned": "Ваш акаўнт верыфікаваны, але ў вас пакуль няма прызначаных парафій для кіравання. Калі ласка, звяжыцеся з адміністратарам для атрымання доступу да парафіі.",
       "contact_admin_button": "✍️ Звязацца з адміністратарам"
     },
     "about": {
-      "main": "Бот створаны как дапамагчы падтрымліваць актуальны расклад імш на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці абнавіць расклад імш на парафіі. Калі зменаў няма - бот дазваляе абнавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзен (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці абнавіць расклад. Таму бот даступны толькi валанцерам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
+      "main": "Бот створаны, каб дапамагчы падтрымліваць актуальны расклад імшаў на рэсурсе www.imsha.by. \n\n Галоўная мэта - паведамленне аб неабходнасці абнавіць расклад імшаў на парафіі. Калі зменаў няма - бот дазваляе абнавіць актуальнасць раскладу хутка праз адну каманду. Кожныя 7 дзён (раз на тыдзень) бот будзе прысылаць паведамленне аб неабходнасці абнавіць расклад. Таму бот даступны толькi валанцёрам з парафій. \n\n Таксама можна праглядзець інфармацыю аб парафіі і напісаць паведамленне распрацоўшчыкам :)"
     },
     "parishes": {
-      "need_select_parish": "Неабходна выбрать парафію, каб абнавіць для яе расклад Імш.",
+      "need_select_parish": "Неабходна выбраць парафію, каб абнавіць для яе расклад імшаў.",
       "chosen_parish": "${title} ",
-      "hook_msg": "<b>${name}</b> ўнесла змены Ў расклад!",
-      "single_parish": "Праверце ўважліва расклад Імш вашай парафіі.",
+      "hook_msg": "<b>${name}</b> ўнесла змены ў расклад!",
+      "single_parish": "Праверце ўважліва расклад імшаў вашай парафіі.",
       "parish_list": "Спіс парафій:",
       "list_of_parishes": "Вось спіс парафій:",
-      "cta_update": "\n Расклад Iмш актуальны?",
+      "cta_update": "\n Расклад імшаў актуальны?",
       "refresh_button": "🚀 Так, усё правільна!",
       "masses_actual": "Усе імшы абноўлены і актуальны. Дзякуй!",
       "change_button": "⚙️ Змяніць расклад",
@@ -52,15 +52,14 @@
       "contact_admin_button": "✍️ Звязацца з адміністратарам"
     },
     "parish": {
-      "title": "Імя парафіі : ${title}",
-      "address": "<b>Адрас парафіі</b> : ${address}",
-      "broadcastUrl": "<b>Спасылка на online трансляцыю</b> : ${broadcastUrl}",
-      "phone": "<b>Телефон парафіі</b> : ${phone}",
-      "email": "<b>Email</b> : ${email}",
-      "website": "<b>Сайт</b> : ${website}",
-      "updatePeriodInDays": "<b>Перыяд актуальнасці імшаў (у днях)</b> : ${updatePeriodInDays}"
+      "title": "Імя парафіі: ${title}",
+      "address": "<b>Адрас парафіі</b>: ${address}",
+      "broadcastUrl": "<b>Спасылка на online трансляцыю</b>: ${broadcastUrl}",
+      "phone": "<b>Телефон парафіі</b>: ${phone}",
+      "email": "<b>Email</b>: ${email}",
+      "website": "<b>Сайт</b>: ${website}",
+      "updatePeriodInDays": "<b>Перыяд актуальнасці імшаў (у днях)</b>: ${updatePeriodInDays}"
     },
-
     "settings": {
       "pick_language": "Выбери язык ❗️",
       "language_changed": "Язык был изменен!",
@@ -72,13 +71,13 @@
       "settings": "Настройки"
     },
     "contact": {
-      "write_to_the_creator": "🤔 Тут ты можаш паслаць паведамленне распрацоўшчыкам бота. Добра падумай і змясці сваю думку ў адно паведамленне!",
-      "message_delivered": "📬 Дзякуй! Твае паведамленне дастаўлена!  "
+      "write_to_the_creator": "🤔 Тут ты можаш даслаць паведамленне распрацоўшчыкам бота. Добра падумай і змясці сваю думку ў адно паведамленне!",
+      "message_delivered": "📬 Дзякуй! Тваё паведамленне дастаўлена!"
     }
   },
   "shared": {
     "what_next": "✋ Чым магу дапамагчы? Спіс задач даступны праз меню!",
-    "something_went_wrong": "❌ Ошибочка вышла.. Попробуй еще раз"
+    "something_went_wrong": "❌ Адбылася памылка. Паспрабуйце яшчэ раз."
   },
   "keyboards": {
     "back_keyboard": {
@@ -94,7 +93,7 @@
     }
   },
   "other": {
-    "default_handler": "🚧 Паведамленне не адпраўлена. Абяры пункт меню 'Зваротная сувязь', каб зкантактавацца з разпрацоўшчыкамі бота.",
+    "default_handler": "🚧 Паведамленне не адпраўлена. Абяры пункт меню 'Зваротная сувязь', каб звязацца з распрацоўшчыкамі бота.",
     "support": "🤝 Если тебе все нравится и ты хочешь выразить благодарность мне и Создателю, то ты можешь сделать это несколькими способами:"
   }
 }
